--- a/foundations/flex/04-flex-information/solution/solution.html
+++ b/foundations/flex/04-flex-information/solution/solution.html
@@ -27,6 +27,22 @@
         <img src="./images/saffron.png" alt="saffron">
         <div class="text">I'm running out of things to say about plants.</div>
       </div>
+      <div class="info">
+        <img src="./images/saffron.png" alt="saffron">
+        <div class="text">I'm running out of things to say about plants.</div>
+      </div>
+      <div class="info">
+        <img src="./images/saffron.png" alt="saffron">
+        <div class="text">I'm running out of things to say about plants.</div>
+      </div>
+      <div class="info">
+        <img src="./images/saffron.png" alt="saffron">
+        <div class="text">I'm running out of things to say about plants.</div>
+      </div>
+      <div class="info">
+        <img src="./images/saffron.png" alt="saffron">
+        <div class="text">I'm running out of things to say about plants.</div>
+      </div>
     </div>
 
     <!-- disregard this section, it's here to give attribution to the creator of these icons -->
